# Traffic-Signal-Optimization

./: .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  assignment.md  car.py  create_output.py  data_inspection.ipynb  deap_test.py  intersection.py  main.py  operators.py  optimizer.py  read_plan_and_simulate.py  requirements.txt  setup.py  simulate.py  simulation.py  specification.md  stable_priority_queue.py  statistics.ipynb  street.py  test.py
.github/actions/python-test-setup/: action.yml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  intersection_instance.cpp  intersection_instance.hpp  intersection_shared.cpp  intersection_shared.hpp  main.cpp  stable_priority_queue.hpp
cpp/bindings/: bindings.cpp
cpp/include/: car.hpp  car_instance.hpp  car_shared.hpp  event.hpp  intersection.hpp  intersection_instance.hpp  intersection_shared.hpp  plan.hpp  plan_instance.hpp  plan_shared.hpp  schedule.hpp  schedule_instance.hpp  schedule_shared.hpp  simulation.hpp  simulation_instance.hpp  simulation_shared.hpp  stable_priority_queue.hpp  street.hpp  street_instance.hpp  street_shared.hpp
cpp/src/: car.cpp  car_instance.cpp  car_shared.cpp  event.cpp  intersection.cpp  intersection_instance.cpp  intersection_shared.cpp  main.cpp  plan.cpp  plan_instance.cpp  schedule.cpp  schedule_instance.cpp  simulation.cpp  simulation_instance.cpp  simulation_shared.cpp  street.cpp  street_instance.cpp  street_shared.cpp
experiments/: Makefile  README.md  init_experiment.py  optimize_experiment.py  plot_experiments.py
experiments/best_solutions/: README.md  b.txt  c.txt  d.txt  e.txt  f.txt
logs/a/deap_test.py-2023-09-14_031538-c=0.5,d=a,g=100,i=None,m=0.2,op=order,p=None,p=100,s=42/: a.csv  info.txt
logs/a/deap_test.py-2023-09-14_040621-c=0.5,d=a,g=1,gm=1,gm=0,i=None,m=0.2,op=order,p=None,p=100,s=42/: a.csv  info.txt
logs/a/deap_test.py-2023-09-21_080218-c=0.5,d=a,g=100,gm=6,gm=0,i=0.05,it=scaled,mb=1,m=0.2,p=None,p=100,s=42,t=3/: a.csv  info.txt
logs/b/deap_test.py-2023-09-14_031635-c=0.5,d=b,g=100,i=None,m=0.2,op=order,p=24,p=100,s=42/: b.csv  b.txt  info.txt
logs/b/deap_test.py-2023-09-14_031939-c=0.5,d=b,g=200,i=None,m=0.2,op=order,p=24,p=100,s=42/: b.csv  b.txt  info.txt
logs/b/deap_test.py-2023-09-20_100836-c=0.5,d=b,g=100,gm=5070,gm=0,i=0.05,it=scaled,mb=1,m=0.2,p=12,p=100,s=42/: b.csv  b.txt  info.txt
logs/b/deap_test.py-2023-09-20_152233-c=0.5,d=b,g=200,gm=5070,gm=0,i=0.05,it=scaled,mb=1,m=0.2,p=12,p=200,s=42,t=3/: b.csv  b.txt  info.txt
logs/b/deap_test.py-2023-09-21_083045-c=0.6,d=b,g=100,gm=5070,gm=0,i=0.05,it=scaled,mb=1,m=0.3,p=12,p=100,s=42,t=3/: b.csv  b.txt  info.txt
logs/c/deap_test.py-2023-09-14_034115-c=0.5,d=c,g=100,gm=1,i=None,m=0.2,op=order,p=24,p=100,s=42/: c.csv  c.txt  info.txt
logs/c/deap_test.py-2023-09-14_034853-c=0.5,d=c,g=200,gm=1,gm=0,i=None,m=0.2,op=order,p=24,p=100,s=42/: c.csv  c.txt  info.txt
logs/c/deap_test.py-2023-09-14_041459-c=0.5,d=c,g=100,gm=2,gm=0,i=None,m=0.2,op=all,p=12,p=100,s=42/: c.csv  c.txt  info.txt
logs/c/deap_test.py-2023-09-20_101337-c=0.5,d=c,g=100,gm=1640,gm=0,i=0.05,it=scaled,mb=1,m=0.2,p=12,p=100,s=42/: c.csv  c.txt  info.txt
logs/c/deap_test.py-2023-09-20_153519-c=0.5,d=c,g=100,gm=1640,gm=0,i=0.05,it=scaled,mb=1,m=0.2,p=24,p=100,s=42,t=3/: c.csv  c.txt  info.txt
logs/d/deap_test.py-2023-09-14_035242-c=0.5,d=d,g=100,gm=1,gm=0,i=None,m=0.2,op=order,p=24,p=100,s=42/: d.csv  d.txt  info.txt
logs/d/deap_test.py-2023-09-20_023919-c=0.5,d=d,g=100,gm=8071,gm=0,i=0.05,it=default,mb=1,m=0.2,p=12,p=100,s=42/: d.csv  d.txt  info.txt
simulation/: CMakeLists.txt  setup.py
simulation/bindings/: bindings.cpp
simulation/include/: car.hpp  city_plan.hpp  city_plan_car.hpp  city_plan_intersection.hpp  city_plan_street.hpp  event.hpp  intersection.hpp  plan.hpp  schedule.hpp  simulation.hpp  simulation_car.hpp  simulation_intersection.hpp  simulation_street.hpp  street.hpp
simulation/src/: car.cpp  city_plan.cpp  city_plan_car.cpp  city_plan_intersection.cpp  city_plan_street.cpp  event.cpp  intersection.cpp  plan.cpp  schedule.cpp  simulation.cpp  simulation_car.cpp  simulation_intersection.cpp  simulation_street.cpp  street.cpp
simulation/tests/: test_basic.cpp  test_io.py  test_score.py  test_time.cpp  test_time.py
tests/: test_io.py  test_optimizer.py  test_score.py
thesis/: .gitignore  bibliography.bib  chap01.tex  chap02.tex  chap03.tex  chap04.tex  chap05.tex  developer_documentation.tex  epilog.tex  metadata.tex  preface.tex  thesis.tex  user_guide.tex
traffic_signaling/: .clang-format  CMakeLists.txt  README.md  pyproject.toml  setup.py
traffic_signaling/bindings/: bindings.cpp
traffic_signaling/include/: city_plan.hpp  city_plan_car.hpp  city_plan_intersection.hpp  city_plan_street.hpp  event.hpp  schedule.hpp  simulation.hpp  simulation_car.hpp  simulation_intersection.hpp  simulation_street.hpp
traffic_signaling/include/city_plan/: car.hpp  city_plan.hpp  intersection.hpp  street.hpp
traffic_signaling/include/simulation/: car.hpp  event.hpp  intersection.hpp  schedule.hpp  simulation.hpp  street.hpp
traffic_signaling/src/: bindings.cpp  city_plan.cpp  city_plan_car.cpp  city_plan_intersection.cpp  city_plan_street.cpp  event.cpp  schedule.cpp  simulation.cpp  simulation_car.cpp  simulation_intersection.cpp  simulation_street.cpp
traffic_signaling/src/bindings/: city_plan.cpp  simulation.cpp
traffic_signaling/src/city_plan/: car.cpp  city_plan.cpp  intersection.cpp  street.cpp
traffic_signaling/src/simulation/: car.cpp  event.cpp  intersection.cpp  schedule.cpp  simulation.cpp  street.cpp
traffic_signaling/tests/: _resolve_imports.py  test_basic.cpp  test_io.cpp  test_io.py  test_multithreading.py  test_score.cpp  test_score.py  test_time.cpp  test_time.py
traffic_signaling/traffic_signaling/: __init__.py  __init__.pyi  city_plan.pyi  data.py  simulation.pyi  utils.py
traffic_signaling/traffic_signaling/city_plan/: __init__.pyi
traffic_signaling/traffic_signaling/simulation/: __init__.pyi
(+47 files in other folders)
